--- a/src/package.json
+++ b/src/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha test",
     "start": "node server.js",
     "dev": "cross-env NODE_ENV=development nodemon server.js"
   },
@@ -17,13 +17,16 @@
   "dependencies": {
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
+    "chai-http": "^4.3.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.12"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
     "cross-env": "^7.0.2",
+    "mocha": "^7.1.2",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.3"
   }
